--- a/index_zh.html
+++ b/index_zh.html
@@ -80,6 +80,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a>Home</a></li>
+            <li><a href="//paintschainer.preferred.tech/howto.html" target="_blank">How to</a></li>
             <li><a href="//paintschainer.preferred.tech/downloads/" target="_blank">Downloads</a></li>
             <li><a href="//github.com/pfnet/PaintsChainer" target="_blank">GitHub</a></li>
           </ul>
